# nexus-ai

./: .gitignore  README.md  pyproject.toml  readme
core/: adapters.py  main.py
demos/: math_app.py  weather_app.py
sdk/: __init__.py  decorators.py
