[project]
name = "ai-connector-platform"
version = "0.1.0"
description = "Middleware/Orquestrador agnóstico de modelos (LLMs) para Function Calling"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.workspace]
members = ["core", "sdk", "demos"]
